assets/css/style.css
body {
    background: lightgray;
    height: 100%
}

footer {
    position: fixed;
    bottom: 0;
    left: 0;
    width: 100%;
    z-index:  3;
    height: 58px;
    background: #666666;
    border-top: solid #cccccc;
}

h1 {
    position: relative;
    padding-top: 10px;
    font-size: 50px;
    padding-right: 8px;
    /* background: #4aaaa5; */
    /* margin-top: 30px; */
    bottom: 43%;
    font-family: 'Georgia', Times, Times New Roman, serif;
    color: #ffffff;
    padding-left: 6px;
}

h2 {
    color: #4aaaa5;
}

h5 {
    color: aliceblue;
    font-size: 2vw;
    text-align: center;
    margin-top: 4%;
}

a:link {
    color: #778899c9;
    text-decoration: none;
}

a:visited {
    color: #778899db;
    text-decoration: none;
}

a:hover {
    font-weight: bolder;

}

a:active {
    font-weight: lighter;
}

#background {
    width: 100%;
    height: 100%;
    position: fixed;
    bottom: 39px;
}
#top {
    position: fixed;
    background: #ffffff;
    left: 0;
    top: 0;
    z-index: 3;
    height: 58px;
    width: 100%;
    border-bottom: solid #cccccc;
    padding-top: 20px;
}

#top_content {
    position: relative;
    width: 980px;
    height: 100%;
    margin: auto;
}

#name_box {
    /* padding-top: 31%; */
    position:  relative;
    float: left;
    width: auto;
    /* padding: 0 50px 0 35px; */
    margin-top: -10px;
    padding-bottom: 9px;
    height: auto;
    background: #4aaaa5;
}

.link_box {
    position: relative;
    width: auto;
    float: right;
    margin-top: 17px;
    border-left: solid 1px gray;
}

#content {
    position: relative;
    width: 980px;
    margin: 114px auto auto auto;
}


#portfolio_box {
    width: 69.3%;
    float: left;
    margin-bottom: 75px;
}

#about_banner {
    font-size: 43px;
    padding: 10px 10px 0 10px;
    font-family: 'Georgia', Times, Times New Roman, serif;
}
 

#biography {
    font-size: 20px;
    color: #000000bd;
    line-height: 143%;
    font-family:  'Arial', 'Helvetica Neue', Helvetica, sans-serif;
}

#portrait {
    width: 42%;
    /* height: 34%; */
    position: relative;
    border: solid #cccccc 3px;
    float:  left;
    margin: 3px 12px 0 1px;
}
#copyright {
    color: #d3d3d39e;
    text-align: center;
    padding-top: 25px;
    padding-left: 33px;
}

#media_box {
    width: 29.16%;
    position: relative;
    float: right;
}

#media {
    position: relative;
}

#media_banner {
    font-size: 29px;
    padding: 8px;
}

#multi_input {
    height: 240px;
    width: 96%;
    position: relative;
    left: 8px;
    margin-bottom: 12px;
}

#submit {
    position: relative;
    float: right;
    margin-right: 12px;
    margin-bottom: 10px;
}


.text_box {
    padding: 10px;
    margin-right: 10px;
}

.thumbnail {
    margin: 10px;
    width: 74%;
}

.media_link {
    position: relative;
    float: left;
    width: 33%;
}

.top_link {
    position: relative;
    float: right;
    padding-left: 3px;
    padding-right: 3px;
    font-size: 20px;
    border-right: solid 1px gray;
}

.portfolio_item {
    position: relative;
    float: left;
    width: 45%;
    margin: 0 5% 3% 0%;
}

.item_holder {
    width: 95%;
    margin: 20px 0 0 4.3%;
}

.port_image {
    width: 100%;
    border: solid slategray;
}

.title_box {
    padding: 10px;
    border-bottom: solid lightgrey .5px;
    margin: 0 20px 0 20px;
}

.item_banner {
    width: 100%;
    position: absolute;
    float: left;
    background: #4aaaa5bf;
    height: 23%;
    z-index:  2;
    padding-right: 2%;
    bottom: 10%;
}

.content_box {
    position: relative;
    background: white;
    border: solid #dddddd;
}

.form_prompt {
    font-size: 19px;
    padding: 10px 10px 0 10px;
}

.single_input {
    width: 96%;
    position: relative;
    left: 8px;
    height: 18px;
}

.about_me {
    width: 66.3%;
    float: left;
    padding-bottom: 10px;
    margin-bottom: 75px;
}

#mobile_head {
    display: none;
}

@media screen and (max-width: 980px) {
    .content_box {
        position: static;
        width: 100%
    }
    .about_me {
        margin-bottom: 20px;
    }

    p {
        /* font-size: 17px; */
    }

    #media_box {
        position: static;
        margin-bottom: 75px;
        width: 100%;
    }
    #content {
        width: 640px;
    }

    #mobile_head {
        display: none;
    }

    #top {
        display: block;
    }

    #top_content {
        width: 640px;
    }
    
}

@media screen and (max-width: 768px) {
    #content {
        width: 585px;
    }

    #top_content {
        width: 585px;
    }

    #portrait {
        width: 100%;
        margin-bottom: 20px;
    }

    #name_box {
        position: static;
        margin: auto;
        width: 100%;
        margin-top: -20px;
    }

    #link_box {
        position: static;
        margin: auto;
        width: 100%;

    }

    #top {
        display: none;
    }

    #mobile_head {
        position: relative;
        display: block;
        width: 100%;
        margin-bottom: -73px;
        height: 111px;
        background: white;
        border-bottom: solid #cccccc;
    }
    h1 {
        text-align: center;
        width: 100%;
        padding: 0;
        padding-bottom: 11px;
        padding-top: 9px;
        background: #4aaaa5;
        /* margin-left: -7%; */
    }

    .link_box {
        border: none;
        float:  none;
        padding-left: 0%;
        width: 409px;
        margin: 10px auto 0 auto;
    }

    .top_link {
        border: none;
        padding: 0px 38px 0 38px;
        float: none;
        /* text-align:  center; */
    }

    
}

